# ccslack

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  Makefile  README.md  pyproject.toml  slack-app-manifest.public.yaml  slack-app-manifest.yaml
docs/: architecture.md  commands.md  configuration.md  development.md  multi-host.md  setup.md
src/ccslack/: __init__.py  bootstrap.py  bot.py  cc_commands.py  cli.py  command_catalog.py  config.py  event_source.py  fleet_state.py  hook.py  last_unit.py  link.py  mailbox.py  main.py  monitor_state.py  router.py  router_link.py  screen_buffer.py  session.py  session_map.py  session_monitor.py  session_query.py  session_resolver.py  slack_client.py  slack_formatting.py  slack_inbound.py  slack_sender.py  spawn_request.py  ssh_auth.py  terminal_parser.py  thread_router.py  tmux_manager.py  topic_state_registry.py  transcript_parser.py  transcript_reader.py  user_preferences.py  utils.py  window_query.py  window_resolver.py  window_state_store.py  (+1 more)
src/ccslack/handlers/: __init__.py  agent_input.py  auth.py  history.py  hook_events.py  interactive.py  meta.py  mute_buffer.py  new_modal.py  panes.py  purge.py  recovery.py  registry.py  resume.py  run_echo.py  screenshot.py  send.py  send_security.py  shell_capture.py  shell_marker.py  ssh_prompt.py  status.py  table_render.py  text.py  toolbar.py  worktree.py
src/ccslack/handlers/messaging_pipeline/: __init__.py  message_routing.py  turn_threads.py
src/ccslack/handlers/polling/: __init__.py  coordinator.py  prompt_probe.py
src/ccslack/hooks/: __init__.py  adapters.py  model.py
src/ccslack/llm/: __init__.py  base.py  httpx_completer.py  summarizer.py
src/ccslack/providers/: __init__.py  _jsonl.py  base.py  claude.py  codex.py  cursor.py  gemini.py  pi.py  pi_discovery.py  pi_format.py  process_detection.py  registry.py  shell.py  shell_infra.py
src/ccslack/tts/: __init__.py  base.py  edge.py  openai.py
src/ccslack/whisper/: __init__.py  httpx_transcriber.py
tests/: conftest.py
tests/ccslack/: test_auth.py  test_channel_create.py  test_channel_name.py  test_channel_prune.py  test_chat_thread.py  test_codex_dedup.py  test_codex_discovery.py  test_commentary.py  test_config_isolation.py  test_config_slash.py  test_cursor_provider.py  test_decorate_role.py  test_event_source.py  test_fleet_meta.py  test_fleet_state.py  test_input_mode.py  test_interactive.py  test_interrupt_to_shell.py  test_join_offer.py  test_kill_target_resolver.py  test_link.py  test_meta_surface.py  test_new_modal.py  test_prompt_probe.py  test_provider_launch.py  test_proxy.py  test_prune_session_map.py  test_public_mode.py  test_purge.py  test_recovery.py  test_relaunch.py  test_rename.py  test_restore_stale_binding.py  test_revive.py  test_router.py  test_router_link.py  test_safe_close_message.py  test_send_browser.py  test_send_outside.py  test_send_search.py  (+16 more)
